<resources>
    <string name="app_name">Dicas de Aprovacao</string>
    <string name="action_settings">Configurações</string>

    <string name="lbl_teste_conhecimento">Teste seu conhecimento</string>
    <string name="lbl_dicas_aprovacao">de aprovação</string>
    <string name="lbl_concurso_enem">Concurso Público e Enem</string>
    <string name="btn_jogar">Jogar</string>

    <!--Tela Primeria Dica-->
    <string name="lbl_pontuacao">Pontuação:</string>
    <string name="btn_continuar">Continuar</string>
    <string name="lbl_primeira_dica">1ª Dica é:</string>
    <string name="btn_opcao_um_dica_um">Organização</string>
    <string name="btn_opcao_dois_dica_um">Planejamento</string>
    <string name="btn_opcao_tres_dica_um">Motivação</string>
    <string name="title_activity_primeira_dica">PrimeiraDicaActivity</string>


    <string name="shared_pontuacao">PONTUACAO</string>
    <string name="btn_detalhes">Detalhes</string>
    <string name="lbl_parabens">Parabéns, continue seguindo essas dicas, que você terá sucesso no seu objetivo!</string>
    <string name="lbl_aviso">Pratique essas dicas na sua vida, que você terá sucesso no seu objetivo!</string>
    <string name="lbl_texto_segunda_dica">
        Fazer resumos; \n
        Grifar as principais ideias; \n
        Praticar exercícios; \n
        Ler em voz alta; \n
        Fazer provas anteriores; \n
        Escutar o áudio das aulas; \n
        Estudar em grupos; \n
        Praticar muitos exercícios.
    </string>

    <string name="lbl_texto_terceira_dica">
        Planeje seu dia; \n
        Ter uma rotina de estudos; \n
        Escolher ambiente tranquilo; \n
        Eliminar as distrações; \n
        Fazer intervalos; \n
        Cuidar bem da sua saúde; \n
        Praticar exercícios físicos.
    </string>


    <!--Tela Segunda Dica-->
    <string name="title_activity_segunda_dica">SegundaDicaActivity</string>
    <string name="lbl_segunda_dica">2ª Dica é:</string>
    <string name="btn_opcao_um_dica_dois">Perseverança</string>
    <string name="btn_opcao_dois_dica_dois">Fazer Intervalos</string>
    <string name="btn_opcao_tres_dica_dois">Método de estudo</string>


    <!--Tela Terceira Dica-->
    <string name="title_activity_terceira_dica">TerceiraDicaActivity</string>
    <string name="lbl_terceira_dica">3ª Dica é:</string>
    <string name="btn_opcao_um_dica_tres">Manter foco</string>
    <string name="btn_opcao_dois_dica_tres">Disciplina</string>
    <string name="btn_opcao_tres_dica_tres">Estudar em grupo</string>


    <!--Tela Quarta Dica-->
    <string name="title_activity_quarta_dica">QuartaDicaActivity</string>
    <string name="lbl_quarta_dica">4ª Dica é:</string>
    <string name="btn_opcao_um_dica_quatro">Pensamento</string>
    <string name="btn_opcao_dois_dica_quatro">Motivação</string>
    <string name="btn_opcao_tres_dica_quatro">Organização</string>

    <!--Tela Quinta  Dica-->
    <string name="title_activity_quinta_dica">QuintaDicaActivity</string>
    <string name="lbl_quinta_dica">5ª Dica é:</string>
    <string name="btn_opcao_um_dica_cinco">Disciplina</string>
    <string name="btn_opcao_dois_dica_cinco">Planejamento</string>
    <string name="btn_opcao_tres_dica_cinco">Perseverança</string>
    <string name="title_activity_pontuacao">PontuacaoActivity</string>


</resources>
