<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.android.dicasaprovacao.QuintaDicaActivity">

    <TextView
        android:id="@+id/lbl_pontuacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/lbl_pontuacao_valor"
        android:paddingBottom="16dp"
        android:paddingRight="16dp"
        android:text="@string/lbl_pontuacao" />

    <TextView
        android:id="@+id/lbl_pontuacao_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="16dp"
        android:text="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_continuar"
        android:layout_below="@+id/lbl_pontuacao_valor"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CustomText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:text="@string/lbl_quinta_dica" />

                <ImageView
                    android:id="@+id/image_dica"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/perseveranca" />

                <Button
                    android:id="@+id/btn_opcao_um"
                    style="@style/CustomButtonOpcoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="mtdOpcaoUm"
                    android:text="@string/btn_opcao_um_dica_cinco" />

                <Button
                    android:id="@+id/btn_opcao_dois"
                    style="@style/CustomButtonOpcoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="mtdOpcaoDois"
                    android:text="@string/btn_opcao_dois_dica_cinco" />

                <Button
                    android:id="@+id/btn_opcao_tres"
                    style="@style/CustomButtonOpcoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="mtdOpcaoTres"
                    android:text="@string/btn_opcao_tres_dica_cinco" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/lbl_correto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="200dp"
        android:paddingRight="16dp"
        android:text="CORRETO!"
        android:textColor="#4CAF50"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/lbl_incorreto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:paddingRight="16dp"
        android:text="INCORRETO!"
        android:textColor="#F44336"
        android:textSize="38sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_continuar"
        style="@style/CustomButtonContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="mtdContinuar"
        android:text="@string/btn_continuar" />

    <Button
        style="@style/CustomButtonContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:text="@string/btn_detalhes" />
</RelativeLayout>