<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.udacity.android.dicasaprovacao.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_jogar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/CustomText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="@string/lbl_teste_conhecimento" />

                <ImageView
                    android:id="@+id/image_dica"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dicas" />

                <TextView
                    style="@style/CustomText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffff"
                    android:paddingBottom="16dp"
                    android:text="@string/lbl_dicas_aprovacao"
                    android:textColor="#B71C1C"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <TextView
                    style="@style/CustomText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/lbl_concurso_enem"
                    android:textColor="#1B5E20"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_jogar"
        style="@style/CustomButtonContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="mtdJogar"
        android:padding="16dp"
        android:text="@string/btn_jogar" />
</RelativeLayout>